--- a/fopasg/src/main/resources/com/mycompany/frontend/export-by-month.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/export-by-month.fxml
@@ -19,7 +19,7 @@
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <DatePicker layoutX="37.0" layoutY="153.0" prefHeight="25.0" prefWidth="117.0">
+            <DatePicker fx:id="month" layoutX="37.0" layoutY="153.0" prefHeight="25.0" prefWidth="117.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
