--- a/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
@@ -20,7 +20,7 @@
                   <Font name="Calibri Bold" size="48.0" />
                </font>
             </Label>
-            <PasswordField fx:id="password" alignment="TOP_CENTER" layoutX="87.0" layoutY="273.0" prefHeight="25.0" prefWidth="600.0" promptText="Password" style="-fx-background-color: #6ABC6A; -fx-background-radius: 50;">
+            <PasswordField fx:id="password" alignment="TOP_CENTER" layoutX="87.0" layoutY="273.0" prefHeight="25.0" prefWidth="600.0" promptText="Password" style="-fx-background-color: #6ABC6A; -fx-background-radius: 50; -fx-text-inner-color: #ffffff;">
                <effect>
                   <ColorAdjust contrast="-0.02" />
                </effect>
@@ -31,7 +31,7 @@
                   <Insets bottom="10.0" top="10.0" />
                </padding>
             </PasswordField>
-            <TextField fx:id="username" accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="87.0" layoutY="205.0" prefHeight="25.0" prefWidth="600.0" promptText="Username/Email" style="-fx-background-radius: 50; -fx-background-color: #669A9D;">
+            <TextField fx:id="username" accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="87.0" layoutY="205.0" prefHeight="25.0" prefWidth="600.0" promptText="Username/Email" style="-fx-background-radius: 50; -fx-background-color: #669A9D; -fx-text-inner-color: #ffffff;">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
