--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
@@ -46,7 +46,7 @@
                </font>
             </Label>
             <!-- Add styleClass="error" to have the red border effect -->
-            <TextField layoutX="37.0" layoutY="138.0" prefHeight="40.0" prefWidth="638.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;">
+            <TextField fx:id="title" layoutX="37.0" layoutY="138.0" prefHeight="40.0" prefWidth="638.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
