--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
@@ -42,7 +42,7 @@
                   <Font name="Roboto Bold" size="12.0" />
                </font>
             </Label>
-            <TextField editable="false" layoutX="37.0" layoutY="138.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;" text="Title">
+            <TextField fx:id="title" editable="false" layoutX="37.0" layoutY="138.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;" text="Title">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
