--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
@@ -27,17 +27,17 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label layoutX="37.0" layoutY="63.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="01 December 2024" textFill="#6a669d">
+            <Label fx:id="date" layoutX="37.0" layoutY="63.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" textFill="#6a669d">
                <font>
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="37.0" layoutY="102.0" style="-fx-background-color: #ffffff;" text="Sunday" textFill="#8f8f8f">
+            <Label fx:id="day" layoutX="37.0" layoutY="102.0" style="-fx-background-color: #ffffff;" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="622.0" layoutY="95.0" style="-fx-background-color: #ffffff;" text="10:15 PM" textFill="#8f8f8f">
+            <Label fx:id="time" layoutX="622.0" layoutY="95.0" style="-fx-background-color: #ffffff;" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto Bold" size="12.0" />
                </font>
