--- a/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
@@ -4,33 +4,20 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.LoginPageController">
    <children>
-      <Pane layoutX="62.0" layoutY="58.0" prefHeight="483.0" prefWidth="774.0" style="-fx-background-color: E5E3D4; -fx-background-radius: 22;">
+      <Pane fx:id="pane" layoutX="62.0" layoutY="58.0" prefHeight="483.0" prefWidth="774.0" style="-fx-background-color: E5E3D4; -fx-background-radius: 22;">
          <children>
             <Label layoutX="281.0" layoutY="72.0" text="THE DIARY">
                <font>
                   <Font name="Calibri Bold" size="48.0" />
                </font>
             </Label>
-            <PasswordField fx:id="password" alignment="TOP_CENTER" layoutX="87.0" layoutY="273.0" prefHeight="25.0" prefWidth="600.0" promptText="Password" style="-fx-background-color: #6ABC6A; -fx-background-radius: 50; -fx-text-inner-color: #ffffff;">
-               <effect>
-                  <ColorAdjust contrast="-0.02" />
-               </effect>
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-               <padding>
-                  <Insets bottom="10.0" top="10.0" />
-               </padding>
-            </PasswordField>
             <TextField fx:id="username" accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="87.0" layoutY="205.0" prefHeight="25.0" prefWidth="600.0" promptText="Username/Email" style="-fx-background-radius: 50; -fx-background-color: #669A9D; -fx-text-inner-color: #ffffff;">
                <font>
                   <Font name="System Bold" size="12.0" />
