--- a/fopasg/src/main/resources/com/mycompany/frontend/profile-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/profile-page.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,7 +14,7 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.ProfilePageController">
    <children>
-      <Pane prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: #ffffff;">
+      <Pane fx:id="pane" prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: #ffffff;" stylesheets="@css/style.css">
          <children>
             <Label layoutX="274.0" layoutY="51.0" text="Personal Detail">
                <font>
@@ -24,7 +23,6 @@
             </Label>
             <TextField fx:id="username" layoutX="134.0" layoutY="233.0" prefHeight="26.0" prefWidth="453.0" style="-fx-background-color: #D9D9D9;" />
             <TextField fx:id="email" layoutX="134.0" layoutY="286.0" prefHeight="26.0" prefWidth="453.0" style="-fx-background-color: #D9D9D9;" />
-            <PasswordField fx:id="password" layoutX="134.0" layoutY="342.0" prefHeight="26.0" prefWidth="454.0" style="-fx-background-color: #D9D9D9;" />
             <Label layoutX="134.0" layoutY="212.0" text="Username">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -35,6 +33,11 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <Text fx:id="emailMsg" layoutX="134.0" layoutY="321.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" styleClass="errorMsg" wrappingWidth="208.0">
+               <font>
+                  <Font name="Roboto Bold" size="10.0" />
+               </font>
+            </Text>
             <Label layoutX="134.0" layoutY="322.0" text="Password (At least 6 characters)">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -45,7 +48,7 @@
                   <Image url="@images/avatar.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="usernameEdit" fitHeight="15.0" fitWidth="15.0" layoutX="565.0" layoutY="238.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="emailEdit" fitHeight="15.0" fitWidth="15.0" layoutX="592.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/edit-profile-icon.png" />
                </image>
@@ -53,15 +56,7 @@
                      <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-            <ImageView fx:id="emailEdit" fitHeight="15.0" fitWidth="15.0" layoutX="565.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/edit-profile-icon.png" />
-               </image>
-               <cursor>
-                     <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView fx:id="passwordEdit" fitHeight="15.0" fitWidth="15.0" layoutX="565.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="passwordEdit" fitHeight="15.0" fitWidth="15.0" layoutX="592.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/edit-profile-icon.png" />
                </image>
