--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
@@ -5,9 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
@@ -93,6 +91,16 @@
             </FlowPane>
          </children>
       </Pane>
+      <Label fx:id="moodLabel" layoutX="643.0" layoutY="44.0" prefHeight="23.0" prefWidth="51.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
+      <ImageView fx:id="moodIcon" fitHeight="25.0" fitWidth="26.0" layoutX="610.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
