--- a/fopasg/src/main/resources/com/mycompany/frontend/export-by-day.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/export-by-day.fxml
@@ -14,18 +14,29 @@
    <children>
       <Pane prefHeight="472.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Label layoutX="37.0" layoutY="63.0" text="Export by A Day" textFill="#6a669d">
+            <Label layoutX="37.0" layoutY="63.0" text="Export by Day" textFill="#6a669d">
                <font>
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <DatePicker fx:id="day" layoutX="37.0" layoutY="153.0" prefHeight="25.0" prefWidth="117.0">
+            <Label layoutX="37.0" layoutY="103.0" text="Select a date to export the diary(s)." textFill="#8f8f8f">
+               <font>
+                  <Font name="Roboto" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="80.0" layoutY="155.0" text="Start Date:" />
+            <DatePicker id="startDate" fx:id="endDate" layoutX="146.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" promptText="Start Date">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </DatePicker>
-            <TilePane layoutX="79.0" layoutY="201.0" prefHeight="231.0" prefWidth="526.0" />
-            <Button layoutX="192.0" layoutY="151.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
+            <Label layoutX="282.0" layoutY="155.0" text="End Date:" />
+            <DatePicker id="endDate" fx:id="startDate" layoutX="342.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" promptText="End Date">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </DatePicker>
+            <Button id="exportBtn" layoutX="481.0" layoutY="148.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
@@ -36,11 +47,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label layoutX="37.0" layoutY="103.0" text="Select a date to export the diary(s)." textFill="#8f8f8f">
-               <font>
-                  <Font name="Roboto" size="12.0" />
-               </font>
-            </Label>
+            <TilePane layoutX="79.0" layoutY="201.0" prefHeight="231.0" prefWidth="526.0" />
          </children>
       </Pane>
       <Button fx:id="backButton" layoutX="28.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
