--- a/fopasg/src/main/resources/com/mycompany/frontend/export-by-week.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/export-by-week.fxml
@@ -5,27 +5,31 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.exportOptions.ExportByWeekController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.exportOptions.ExportByDayController">
    <children>
       <Pane prefHeight="472.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Label layoutX="37.0" layoutY="63.0" text="Export by A Week" textFill="#6a669d">
+            <Label layoutX="37.0" layoutY="63.0" text="Export by Week" textFill="#6a669d">
                <font>
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <DatePicker fx:id="week" layoutX="37.0" layoutY="153.0" prefHeight="25.0" prefWidth="117.0">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </DatePicker>
-            <TilePane layoutX="79.0" layoutY="201.0" prefHeight="231.0" prefWidth="526.0" />
-            <Button layoutX="192.0" layoutY="151.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
+            <Label layoutX="37.0" layoutY="103.0" text="Select a date to export the diary(s)." textFill="#8f8f8f">
+               <font>
+                  <Font name="Roboto" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="80.0" layoutY="155.0" text="Start Date:" />
+            <DatePicker id="startDate" layoutX="145.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" />
+            <Label layoutX="281.0" layoutY="155.0" text="Weeks:" />
+            <Spinner id="week" editable="true" layoutX="328.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" />
+            <Button id="exportBtn" layoutX="481.0" layoutY="148.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
@@ -36,11 +40,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label layoutX="37.0" layoutY="103.0" text="Select a week to export the diary(s)." textFill="#8f8f8f">
-               <font>
-                  <Font name="Roboto" size="12.0" />
-               </font>
-            </Label>
+            <TilePane layoutX="79.0" layoutY="201.0" prefHeight="231.0" prefWidth="526.0" />
          </children>
       </Pane>
       <Button fx:id="backButton" layoutX="28.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
