--- a/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
@@ -24,7 +24,8 @@
                </font>
                <padding>
                   <Insets bottom="10.0" top="10.0" />
-               </padding></TextField>
+               </padding>
+            </TextField>
             <Button fx:id="submitBtn" layoutX="254.0" layoutY="352.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="267.0" style="-fx-background-color: #000000; -fx-background-radius: 5;" text="LOGIN" textFill="WHITE">
                <font>
                   <Font name="Roboto Black" size="12.0" />
