--- a/fopasg/src/main/resources/com/mycompany/frontend/export-by-day.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/export-by-day.fxml
@@ -25,18 +25,18 @@
                </font>
             </Label>
             <Label layoutX="80.0" layoutY="155.0" text="Start Date:" />
-            <DatePicker id="startDate" fx:id="endDate" layoutX="146.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" promptText="Start Date">
+            <DatePicker fx:id="startDate" layoutX="146.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" promptText="Start Date">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </DatePicker>
             <Label layoutX="282.0" layoutY="155.0" text="End Date:" />
-            <DatePicker id="endDate" fx:id="startDate" layoutX="342.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" promptText="End Date">
+            <DatePicker fx:id="endDate" layoutX="342.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" promptText="End Date">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </DatePicker>
-            <Button id="exportBtn" layoutX="481.0" layoutY="148.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
+            <Button fx:id="exportBtn" layoutX="481.0" layoutY="148.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
