--- a/fopasg/src/main/resources/com/mycompany/frontend/export-by-week.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/export-by-week.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.exportOptions.ExportByDayController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.exportOptions.ExportByWeekController">
    <children>
       <Pane prefHeight="472.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
          <children>
@@ -20,16 +20,16 @@
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="37.0" layoutY="103.0" text="Select a date to export the diary(s)." textFill="#8f8f8f">
+            <Label layoutX="37.0" layoutY="103.0" text="Select start date and number of weeks after the date to export the diary(s)." textFill="#8f8f8f">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
             </Label>
             <Label layoutX="80.0" layoutY="155.0" text="Start Date:" />
-            <DatePicker id="startDate" layoutX="145.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" />
+            <DatePicker fx:id="startDate" layoutX="145.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" />
             <Label layoutX="281.0" layoutY="155.0" text="Weeks:" />
-            <Spinner id="week" editable="true" layoutX="328.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" />
-            <Button id="exportBtn" layoutX="481.0" layoutY="148.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
+            <Spinner fx:id="week" editable="true" layoutX="328.0" layoutY="151.0" prefHeight="25.0" prefWidth="117.0" />
+            <Button fx:id="exportBtn" layoutX="481.0" layoutY="148.0" mnemonicParsing="false" prefWidth="124.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Export" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
