--- a/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.LoginPageController">
    <children>
@@ -18,7 +19,12 @@
                   <Font name="Calibri Bold" size="48.0" />
                </font>
             </Label>
-            <TextField fx:id="username" accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="87.0" layoutY="205.0" prefHeight="25.0" prefWidth="600.0" promptText="Username/Email" style="-fx-background-radius: 50; -fx-background-color: #669A9D; -fx-text-inner-color: #ffffff;">
+            <Label fx:id="usernameLabel" layoutX="94.0" layoutY="171.0" text="Username/Email">
+               <font>
+                  <Font name="Roboto Black" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="username" accessibleRole="CONTEXT_MENU" alignment="TOP_CENTER" layoutX="87.0" layoutY="193.0" prefHeight="25.0" prefWidth="600.0" promptText="Username/Email" style="-fx-background-radius: 50; -fx-background-color: #669A9D; -fx-text-inner-color: #ffffff;">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -26,6 +32,21 @@
                   <Insets bottom="10.0" top="10.0" />
                </padding>
             </TextField>
+            <Text fx:id="usernameMsg" fill="RED" layoutX="94.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" styleClass="errorMsg" wrappingWidth="586.0">
+               <font>
+                  <Font name="Roboto Bold" size="10.0" />
+               </font>
+            </Text>
+            <Label fx:id="passwordLabel" layoutX="94.0" layoutY="253.0" text="Password">
+               <font>
+                  <Font name="Roboto Black" size="12.0" />
+               </font>
+            </Label>
+            <Text fx:id="passwordMsg" fill="RED" layoutX="94.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" styleClass="errorMsg" wrappingWidth="586.0">
+               <font>
+                  <Font name="Roboto Bold" size="10.0" />
+               </font>
+            </Text>
             <Button fx:id="submitBtn" layoutX="254.0" layoutY="352.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="267.0" style="-fx-background-color: #000000; -fx-background-radius: 5;" text="LOGIN" textFill="WHITE">
                <font>
                   <Font name="Roboto Black" size="12.0" />
@@ -42,16 +63,6 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label fx:id="usernameLabel" layoutX="94.0" layoutY="183.0" text="Username/Email">
-               <font>
-                  <Font name="Roboto Black" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="passwordLabel" layoutX="94.0" layoutY="253.0" text="Password">
-               <font>
-                  <Font name="Roboto Black" size="12.0" />
-               </font>
-            </Label>
          </children>
       </Pane>
    </children>
